--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
     "aos": "^2.3.4",
+    "firebase": "^9.12.1",
     "lottie-react": "^2.3.1",
     "react": "^18.2.0",
     "react-dark-mode-toggle": "^0.2.0",
@@ -15,7 +16,9 @@
     "react-icons": "^4.6.0",
     "react-router-dom": "^6.4.2",
     "react-scripts": "5.0.1",
+    "react-to-pdf": "^0.0.14",
     "react-toastify": "^9.0.8",
+    "react-tooltip": "^4.4.3",
     "swiper": "^8.4.4",
     "web-vitals": "^2.1.4"
   },
