--- a/package.json
+++ b/package.json
@@ -9,11 +9,13 @@
     "@testing-library/user-event": "^13.5.0",
     "aos": "^2.3.4",
     "firebase": "^9.12.1",
+    "leaflet": "^1.9.2",
     "lottie-react": "^2.3.1",
     "react": "^18.2.0",
     "react-dark-mode-toggle": "^0.2.0",
     "react-dom": "^18.2.0",
     "react-icons": "^4.6.0",
+    "react-leaflet": "^4.1.0",
     "react-router-dom": "^6.4.2",
     "react-scripts": "5.0.1",
     "react-to-pdf": "^0.0.14",
